# safe-farming

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pr.yml
src/: accumulation.rs  calculation.rs  example.rs  lib.rs  utils.rs
