[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Implementation of the reward scheme for the SAFE Network."
documentation = "https://docs.rs/safe-farming"
edition = "2018"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "safe-farming"
readme = "README.md"
repository = "https://github.com/maidsafe/safe-farming"
version = "0.1.0"

# [patch.crates-io]
# safe-nd =  { git = "https://github.com/oetyng/safe-nd.git", rev = "2c16b8c" }

[dependencies]
# # Ensure bincode version is identical to that in SAFE Client Libs and SAFE Network Data.
bincode = "=1.2.1"
safe-nd = { git = "https://github.com/oetyng/safe-nd.git", branch = "messaging_refactor" }
serde = { version = "~1.0.97", features = ["derive"] }
crdts = "4.1.0"
threshold_crypto = "~0.3.2"
rand = "~0.7.3"
rayon = "1.3.1"

[dev_dependencies]
